--- a/CSS/7 Import a Google Font.html
+++ b/CSS/7 Import a Google Font.html
@@ -2,8 +2,16 @@
    .red-text {
      color: red;
    }
- </style>
  
+   p {
+     font-size: 16px;
+     font-family: monospace;
+   }
+   h2 {
+     font-family: Lobster;
+   }
+ </style>
+ <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
  <h2 class="red-text">CatPhotoApp</h2>
  <main>
    <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
