--- a/CSS/12 Make Circular Images with a border-radius.html
+++ b/CSS/12 Make Circular Images with a border-radius.html
@@ -12,8 +12,17 @@
     font-size: 16px;
     font-family: monospace;
   }
+
+  .thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 10px;
+  }
+
   .smaller-image {
     width: 100px;
+    border-radius: 50%;
   }
 </style>
 
@@ -21,7 +30,7 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img class="smaller-image" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="smaller-image thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
 
   <div>
     <p>Things cats love:</p>
