--- a/CSS/24 Understand Absolute versus Relative Units.html
+++ b/CSS/24 Understand Absolute versus Relative Units.html
@@ -13,30 +13,26 @@
  
    .yellow-box {
      background-color: yellow;
-     padding: 10px;
+     padding: 20px 40px 20px 40px;
    }
  
    .red-box {
-     background-color: crimson;
-     color: #fff;
-     margin-top: 40px;
-     margin-right: 20px;
-     margin-bottom: 20px;
-     margin-left: 40px;
+     background-color: red;
+     margin: 20px 40px 20px 40px;
+ 
    }
  
-   .blue-box {
-     background-color: blue;
-     color: #fff;
-     margin-top: 40px;
-     margin-left: 40px;
- margin-bottom: 20px;
- margin-right: 20px;
+   .green-box {
+     background-color: green;
+     margin: 20px 40px 20px 40px;
+   }
+   .red-box {
+     padding: 1.5em;
    }
  </style>
  <h5 class="injected-text">margin</h5>
  
  <div class="box yellow-box">
    <h5 class="box red-box">padding</h5>
-   <h5 class="box blue-box">padding</h5>
+   <h5 class="box green-box">padding</h5>
  </div>
