--- a/CSS/68 Change the Position of Overlapping Elements with the z-index Property.html
+++ b/CSS/68 Change the Position of Overlapping Elements with the z-index Property.html
@@ -6,3 +6,26 @@ Add a z-index property to the element with the class name of first (the red rect
 
 The element with class first should have a z-index value of 2. -->
 
+<style>
+   div {
+     width: 60%;
+     height: 200px;
+     margin-top: 20px;
+   }
+ 
+   .first {
+     background-color: red;
+     position: absolute;
+     z-index: 2;
+   }
+   .second {
+     background-color: blue;
+     position: absolute;
+     left: 40px;
+     top: 50px;
+     z-index: 1;
+   }
+ </style>
+ 
+ <div class="first"></div>
+ <div class="second"></div>
