--- a/CSS/163 Build a Tribute Page.html
+++ b/CSS/163 Build a Tribute Page.html
@@ -47,7 +47,14 @@ Waiting:Your #image should be centered within its parent. -->
 <body>
    <main id="main">
       <h1>Dr. Norman Borlaug</h1>
-   </main>
-   
+<p>The man who saved a billion lives</p>
+<figure id="img-div">
+   <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists">
+</figure>
+
+
+
+
+   </main>   
 </body>
 </html>
